<resources>
    <string name="app_name">Music Player</string>

    <string name="home">Home</string>
    <string name="playing">Playing</string>
    <string name="download">Download</string>

    <string name="categories">Categories</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="favorites">Favorites</string>
    <string name="playlist">Playlists</string>

    <string name="no_downloading">Nothing downloading yet</string>
    <string name="no_downloaded">Nothing downloaded yet</string>
</resources>
