<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/downloadFragment"
        tools:context="vn.edu.usth.musicplayer.fragment.DownloadFragment">

    <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@color/downloadColor">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/category"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/title">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/categories"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif"/>

        <View
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/downloadColor"/>

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/category"
            android:fillViewport="false">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#000000"
                android:dividerPadding="20dp"
                android:showDividers="middle">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/songs"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/songs"
                            android:textSize="20sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="4"
                        android:textSize="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/albums"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/albums"
                            android:textSize="20sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="2"
                        android:textSize="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/artists"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/artists"
                            android:textSize="20sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="2"
                        android:textSize="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/list"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/playlist"
                            android:textSize="20sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="1"
                        android:textSize="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/fav"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/favorites"
                            android:textSize="20sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="1"
                        android:textSize="20dp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
